# WinTimeMaster

./: CMakeLists.txt  Main.cpp  README.md  version.rc
Core/: AboutController.cpp  AboutController.h  AsyncLogger.cpp  AsyncLogger.h  ConfigManager.cpp  ConfigManager.h  LanguageManager.cpp  LanguageManager.h  LockController.cpp  LockController.h  PasswordHasher.cpp  PasswordHasher.h  RemoteConfigUpdater.cpp  RemoteConfigUpdater.h  SettingsController.cpp  SettingsController.h  TimeRule.cpp  TimeRule.h  TimeRuleModel.cpp  TimeRuleModel.h  TimeSyncManager.cpp  TimeSyncManager.h  TrayManager.cpp  TrayManager.h  UpdateChecker.cpp  UpdateChecker.h
Translations/: en_US.ts  ja_JP.ts  ko.ts  zh_CN.ts  zh_TW.ts
UI/: AboutDialog.qml  AdvancedSettings.qml  LockScreen.qml  PasswordDialog.qml  PasswordWindow.qml  RuleEditor.qml  Settings.qml
